# logtally

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
logtally/: __init__.py  __main__.py  cli.py  config.py  patterns.py  stream.py  summary.py
logtally/_data/: default.yaml
tests/: test_patterns.py  test_stream.py  test_summary.py
