[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logtally"
version = "0.1.0"
description = "Structured log triage. Stream a log, match against configurable patterns, get a summary."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Madhusudan A" }]
keywords = ["log", "logs", "log-analysis", "cli", "debugging", "triage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
logtally = "logtally.cli:main"

[project.urls]
Homepage = "https://github.com/amadhusudan/logtally"
Issues = "https://github.com/amadhusudan/logtally/issues"

[tool.setuptools]
packages = ["logtally"]
include-package-data = true

[tool.setuptools.package-data]
logtally = ["_data/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "UP", "I"]
